fix padding in the part consent

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <textarea class="over" name="message" id="message" aria-invalid="true"></textarea>
                         <span class="error" aria-hidden="true">This field is required</span>
                     </div>
-                    <div class="part">
+                    <div class="part part-last">
                         <div class="part-consent">
                             <input type="checkbox" name="consent" id="consent">
                             <label class="consent-h" class="headland" for="consent">I consent to being contacted by the team<small class="required"> *</small></label>
